# Image-OCR-and-Tag

./: Main.py  README.md  Run.ps1  pyproject.toml  requirements.txt
